Начало верстки с препроцессором

--- a/less/style.less
+++ b/less/style.less
@@ -1,1 +1,5 @@
-body { background: #fff; }
+@import "normalize.less";
+@import "variables.less";
+@import "global/fonts.less";
+@import "blocks/page-header.less";
+@import "blocks/logo.less";
