половина разметки index

--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,12 @@
 @import "normalize.less";
 @import "variables.less";
 @import "global/fonts.less";
+@import "global/base.less";
 @import "blocks/page-header.less";
 @import "blocks/logo.less";
+@import "blocks/reviews.less";
+@import "blocks/page-preview.less";
+@import "blocks/about.less";
+@import "blocks/contacts.less";
+@import "blocks/page-footer.less";
+@import "blocks/featured.less";
