разметка index-mobile

--- a/less/blocks/featured.less
+++ b/less/blocks/featured.less
@@ -13,3 +13,23 @@
 .feature-product{
   color: @p-color;
 }
+.featured__price{
+  display:block;
+  text-align: center;
+  margin-top: 20px;
+  font-size:17px;
+  font-weight: bold;
+  line-height: 24px;
+}
+.featured__buy{
+  margin-top: 20px;
+  text-transform: uppercase;
+  display: block;
+  text-align: center;
+  padding: 14px 0;
+  border: 2px solid @p-color;
+  color: @p-color;
+  font-size: 18px;
+  line-height: 20px;
+  font-weight: bold;
+}
