--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -1,6 +1,7 @@
 .reviews{
   padding: 0 30px;
   margin-top: 60px;
+  margin-bottom: 44px;
 }
 .reviews__title{
   margin-bottom: 35px;
@@ -21,15 +22,26 @@
   color: #000;
   font-weight: bold;
 }
+.control{
+margin-bottom: 38px;
+}
 .reviews__prev{
-  width: 129px;
-  display: inline;
+  width: 130px;
+  display: inline-block;
+  margin-right: -8px;
 }
 .reviews__next{
-  width: 128px;
-  display: inline;
+  width: 130px;
+  display: inline-block;
 }
 .reviews__write-reviws{
+  text-transform: uppercase;
+  display: block;
   text-align: center;
-  width: 200px;
+  padding: 14px 0;
+  border: 2px solid @p-color;
+  color: @p-color;
+  font-size: 18px;
+  line-height: 20px;
+  font-weight: bold;
 }
