--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -1,17 +1,19 @@
-.about{
+.about {
   padding: 0 30px;
 }
-.about__title{
-  margin-top:35px;
+
+.about__title {
+  margin-top: 35px;
 }
-.about__item{
+
+.about__item {
   padding-top: 33px;
 }
+
 .about__item p {
-  font-size:17px;
+  font-size: 17px;
   font-weight: bold;
   line-height: 20px;
-  margin: 0;
-  margin-top:20px;
+  margin: 20px 0 0;
   padding-right: 10px;
 }
