--- a/less/blocks/page-preview.less
+++ b/less/blocks/page-preview.less
@@ -1,6 +1,6 @@
 .page-preview {
   padding: 0 30px;
-  background: url("../../img/hero-mobile@1x.jpg") 50% 0 no-repeat;
+  background: url("../img/hero-mobile@1x.jpg") 50% 0 no-repeat;
 }
 
 .page-preview__title {
@@ -20,25 +20,31 @@
     padding: 0;
   }
 }
-.page-preview__item--ico::before{
+
+.page-preview__production {
+  position: relative;
+}
+
+.page-preview__item--ico::before {
   content: "";
   right: 50px;
-  bottom: 10px;
-  width:50px;
+  bottom: 110px;
+  width: 50px;
   height: 65px;
-  background: url("../../img/icon-interior.svg") no-repeat;
+  background: url("../img/icon-interior.svg") no-repeat;
   position: absolute;
 }
 
 .page-preview__item--color {
   background-color: #56c3b2;
 }
+
 .page-preview__item--color::before {
   content: "";
   right: 50px;
-  bottom: -90px;
-  width:65px;
+  bottom: 10px;
+  width: 65px;
   height: 65px;
-  background: url("../../img/icon-toy.svg") no-repeat;
+  background: url("../img/icon-toy.svg") no-repeat;
   position: absolute;
 }
