--- a/less/global/base.less
+++ b/less/global/base.less
@@ -1,6 +1,6 @@
 body {
   font-family: "Open Sans", "Arial", sans-serif;
-  background-color: #fffff;
+  background-color: #fff;
   color: #000000;
 }
 
@@ -18,7 +18,14 @@ h2 {
   line-height: 30px;
   color: #000000;
   font-weight: bold;
-  margin: 0
+  margin: 0;
+}
+
+h3 {
+  font-size: 17px;
+  margin: 0;
+  font-weight: bold;
+  line-height: 24px;
 }
 
 a {
