--- a/less/style.less
+++ b/less/style.less
@@ -10,3 +10,5 @@
 @import "blocks/contacts.less";
 @import "blocks/page-footer.less";
 @import "blocks/featured.less";
+@import "blocks/catalog.less";
+@import "blocks/video.less";
