Начало верстки с form

--- a/less/blocks/catalog.less
+++ b/less/blocks/catalog.less
@@ -25,3 +25,18 @@
 .catalog-item-footer {
   padding-top: 27px;
 }
+
+.catalog-item-footer__cost{
+  font-size: 15px;S
+  width: 90px;
+  display:inline-block;
+  word-wrap:break-word;
+}
+.catalog-item-footer__basket{
+  width: 102px;
+  display: inline-block;
+  height: 21px;
+  background: url("../img/icon-cart.svg") no-repeat;
+  background-position: right;
+  text-align: right;
+}
