--- a/less/style.less
+++ b/less/style.less
@@ -12,3 +12,5 @@
 @import "blocks/featured.less";
 @import "blocks/catalog.less";
 @import "blocks/video.less";
+@import "blocks/order-form";
+@import "blocks/filter-type.less";
