--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -27,18 +27,8 @@
 
 .video-player {
   width: 100%;
-  height: 100%;
+  height: auto;
   background: url("../img/video-mobile@1x.jpg") 100% 0 no-repeat;
-}
-
-.video-player::after {
-  content: "";
-  right: 50px;
-  bottom: 110px;
-  width: 50px;
-  height: 65px;
-  background: url("../img/icon-interior.svg") no-repeat;
-  position: absolute;
 }
 
 .video__make-order {
