--- a/less/style.less
+++ b/less/style.less
@@ -14,3 +14,6 @@
 @import "blocks/video.less";
 @import "blocks/order-form";
 @import "blocks/filter-type.less";
+@import "mixin.less";
+@import "blocks/filter-color.less";
+@import "blocks/user-info.less";
