--- a/less/blocks/page-preview.less
+++ b/less/blocks/page-preview.less
@@ -21,14 +21,14 @@
   }
 }
 
-.page-preview__production {
+.page-preview__item {
   position: relative;
 }
 
 .page-preview__item--ico::before {
   content: "";
   right: 50px;
-  bottom: 110px;
+  bottom: 5px;
   width: 50px;
   height: 65px;
   background: url("../img/icon-interior.svg") no-repeat;
@@ -42,7 +42,7 @@
 .page-preview__item--color::before {
   content: "";
   right: 50px;
-  bottom: 10px;
+  bottom: 5px;
   width: 65px;
   height: 65px;
   background: url("../img/icon-toy.svg") no-repeat;
