--- a/less/mixin.less
+++ b/less/mixin.less
@@ -1,10 +1,23 @@
-.green-line(){
+.green-line() {
   content: "";
   width: 200px;
   height: 1px;
   position: absolute;
   background-color: @mint-color;
   right: 0;
-  top: 0px;
+  top: 0;
   background-position: right;
+}
+
+.btn() {
+  text-transform: uppercase;
+  display: block;
+  text-align: center;
+  padding: 14px 0;
+  border: 2px solid @p-color;
+  color: @p-color;
+  font-size: 18px;
+  line-height: 20px;
+  font-weight: bold;
+  width: 100%;
 }
