--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -1,5 +1,6 @@
 .page-header {
-  background-color: #fff;
+  .container();
+  background-color: #ffffff;
 }
 
 .page-header__title {
@@ -19,6 +20,7 @@
   padding-bottom: 35px;
   padding-left: 74px;
   border-top: 1px solid #ececec;
+  position: relative;
 
   & a {
     font-size: 17px;
