--- a/less/blocks/user-info.less
+++ b/less/blocks/user-info.less
@@ -57,6 +57,10 @@
   .btn();
   background: #fff;
 }
+.user-email__icon-email,
+.user-phone__icon-phone {
+  position: relative;
+}
 
 .user-phone__icon-phone::before {
   content: "";
@@ -66,6 +70,8 @@
   background: url("../img/icon-phone.svg") no-repeat;
   right: 30px;
 }
+
+
 
 .user-email__icon-email::after {
   content: "";
