--- a/less/mixin.less
+++ b/less/mixin.less
@@ -26,4 +26,11 @@
   width: 320px;
   margin: 0 auto;
 
+  @media @tablet-widths {
+    width: 640px;
+  }
+
+  @media @desktop-widths {
+    width: 960px;
+  }
 }
