--- a/less/variables.less
+++ b/less/variables.less
@@ -2,3 +2,5 @@
 @bg-footer:#f1f1f1;
 @p-color:#444444;
 @form-text-color:#d2d2d2;
+@tablet-widths: ~"(min-width: 768px)";
+@desktop-widths: ~"(min-width: 1200px)";
