верстка авдптива начало

--- a/less/blocks/featured.less
+++ b/less/blocks/featured.less
@@ -36,3 +36,20 @@
   line-height: 20px;
   font-weight: bold;
 }
+
+//планшет
+
+
+
+@media @tablet-widths {
+  .feature-product{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .feature-product__description {
+      width: 300px;
+    }
+  .feature-product__list{
+      width: 300px;
+    }
+}
