--- a/less/blocks/logo.less
+++ b/less/blocks/logo.less
@@ -4,3 +4,12 @@
   padding-bottom: 18px;
   text-align: center;
 }
+
+@media @tablet-widths {
+   .logo {
+    width: 372px;
+    text-align: left;
+    border-right: 1px solid @border-color;
+    float: left;
+ }
+}
