--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -17,3 +17,20 @@
   margin: 20px 0 0;
   padding-right: 10px;
 }
+
+@media @tablet-widths {
+  .about {
+    padding: 0;
+    margin-top: 65px;
+
+    &__list{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    }
+    &__item{
+      width: 32%;
+      margin-right: 119px;
+    }
+  }
+}
