--- a/less/blocks/page-preview.less
+++ b/less/blocks/page-preview.less
@@ -51,22 +51,29 @@
 
 @media @tablet-widths {
   .page-preview {
+    padding: 0;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+
     &__title h1{
       font-size:43px;
       line-height:50px;
     }
-  }
-  .page-preview__production{
-    display: flex;
-    flex-direction: row;
-  }
-  .page-preview__title{
-    width: 768px;
-  }
-  .page-preview__item{
-  padding-right: 140px;
+
+    &__production{
+      margin: 0;
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+    }
+    &__title{
+      width: 100%;
+    }
+    &__item{
+      margin: 0;
+      padding-right: 0;
+      width: 50%;
+    }
   }
 }
