--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -34,3 +34,14 @@
     }
   }
 }
+
+@media @desktop-widths {
+  .about {
+    padding-left: 175px;
+    padding-right: 175px;
+    &__title{
+      font-size: 53px;
+      line-height: 57px
+    }
+  }
+}
