--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -53,3 +53,36 @@
     margin-bottom: -10px;
   }
 }
+
+//планшет
+
+@media @tablet-widths {
+  .page-footer {
+    width: 668px;
+    padding:50px 50px;
+    display: flex;
+    justify-content: space-between;
+    &__logo{
+
+    }
+    &__social{
+      padding: 0;
+      margin: 0;
+      border: none;
+    }
+    &__copyright{
+      padding: 0;
+      margin: 0;
+    }
+
+  }
+}
+
+//пк
+
+@media @desktop-widths {
+  .page-footer{
+    width: 1050px;
+  }
+
+}
