--- a/less/blocks/page-preview.less
+++ b/less/blocks/page-preview.less
@@ -77,3 +77,14 @@
     }
   }
 }
+
+
+@media @desktop-widths {
+  .reviews{
+    margin-left: 175px;
+    &__title{
+      font-size: 53px;
+      line-height: 57px;
+    }
+  }
+}
