--- a/less/mixin.less
+++ b/less/mixin.less
@@ -28,9 +28,12 @@
 
   @media @tablet-widths {
     width: 668px;
+
   }
 
   @media @desktop-widths {
-    width: 960px;
+    width: 1050px;
+    padding-left: 50px;
+    padding-right: 50px;
   }
 }
