--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -55,6 +55,10 @@
 }
 
 @media @tablet-widths {
+  .page-header__title h1{
+    font-size:43px;
+    line-height: 50px;
+  }
   .main-nav-toggle{
     display: none;
   }
