--- a/less/blocks/catalog.less
+++ b/less/blocks/catalog.less
@@ -27,7 +27,8 @@
 }
 
 .catalog-item-footer__cost{
-  font-size: 15px;S
+  font-weight: bold;
+  font-size: 15px;
   width: 90px;
   display:inline-block;
   word-wrap:break-word;
@@ -39,4 +40,45 @@
   background: url("../img/icon-cart.svg") no-repeat;
   background-position: right;
   text-align: right;
+}
+
+//планшет
+
+@media @tablet-widths {
+  .catalog{
+    padding: 0;
+    &__item{
+      width: 100;
+      display: flex;
+      margin-bottom: 50px;
+    }
+  }
+  .catalog-item-footer{
+    padding-top: 30px;
+    padding-bottom: 35px;
+  }
+  .catalog-item-footer__basket{
+    width: 207px;
+  }
+  .catalog-item-image{
+    width: 50%;
+    & img{
+      width: 100%;
+      height: 100%
+    }
+  }
+  .item-content{
+    padding-top: 60px;
+    padding: 0;
+    width: 50%;
+    &__title{
+      font-size:20px;
+      line-height: 24px;
+    }
+    & p{
+      font-size: 15px;
+      line-height: 30px;
+      padding-bottom: 100px;
+    }
+  }
 }
