--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -2,6 +2,9 @@
   .container();
   margin-top: 30px;
   background-color: @bg-footer;
+  &__logo{
+    display: none;
+  }
 }
 
 .page-footer__social {
@@ -74,7 +77,9 @@
       padding: 0;
       margin: 0;
     }
-
+    &__logo{
+      display: block;
+    }
   }
 }
 
