--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -27,7 +27,7 @@
 
 .video-player {
   width: 100%;
-  height: auto;
+  height: 100%;
   background: url("../img/video-mobile@1x.jpg") 100% 0 no-repeat;
 }
 
@@ -44,7 +44,35 @@
   font-weight: bold;
 }
 @media @tablet-widths {
-  .video{
+  .video {
     margin: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
+  .video-player {
+    order: -1;
+    height: 455px;
+    border-bottom: 1px solid @border-color;
+  }
+  .video-header {
+    margin-top: 30px;
+    width: 100%;
+    padding: 0 40px;
+    & h3{
+      font-size:20px;
+      line-height: 24 px;
+      font-weight: bold;
+    }
+  }
+  .video__comment{
+    font-size: 15px;
+    line-height: 30px;
+    color: @p-color
+  }
+  .video__make-order{
+    width:100%;
+    margin:  40px 40px;
+  }
+
 }
