--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -86,8 +86,14 @@
     flex-direction: row;
 
     margin-left: 175px;
+    &__wrapper{
+      width: 40%;
+      height: 300px;
+    }
+    &__write-us{
+      width: 346px;
+    }
     &__list{
-      order: 3;
       width: 350px;
       & tbody{
         display: flex;
@@ -98,19 +104,12 @@
         width: 100%;
       }
     }
-    &__title{
-      order: 1;
-      width: 350px;
-    }
-    &__write-us{
-      width: 310px;
-      order: 4;
-    }
+
+
   }
   .map{
     padding: 0;
-    order: 2;
-    width: 50%;
+    width: 60%;
   }
   .contacts__title::before{
     left: -100px;
