--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -43,6 +43,9 @@
   line-height: 20px;
   font-weight: bold;
 }
+
+//tablet
+
 @media @tablet-widths {
   .video {
     margin: 0;
@@ -54,6 +57,7 @@
     order: -1;
     height: 455px;
     border-bottom: 1px solid @border-color;
+    background-size: cover;
   }
   .video-header {
     margin-top: 30px;
@@ -74,5 +78,7 @@
     width:100%;
     margin:  40px 40px;
   }
+}
+@media @desktop-widths {
 
 }
