--- a/less/blocks/filter-color.less
+++ b/less/blocks/filter-color.less
@@ -13,3 +13,14 @@
     font-weight: bold;
   }
 }
+
+//tablet
+
+@media @tablet-widths {
+  .filter-color{
+    background-color: @bg-footer;
+  }
+  .filter-color__title::after{
+    display: none;
+  }
+}
