--- a/less/blocks/filter-type.less
+++ b/less/blocks/filter-type.less
@@ -22,3 +22,24 @@
   color:#000;
   font-weight: bold;
 }
+
+//tablet
+
+@media @tablet-widths {
+  .filter-type{
+    width: 668px;
+    padding: 0;
+    margin: 40px auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    &__header{
+    }
+    &__item{
+    }
+  }
+  .filter-type__title::after{
+    display: none;
+
+  }
+}
