--- a/less/blocks/user-info.less
+++ b/less/blocks/user-info.less
@@ -81,3 +81,12 @@
   background: url("../img/icon-mail.svg") no-repeat;
   right: 30px;
 }
+
+//@tablet
+
+@media @tablet-widths {
+  .color-wrapper{
+    margin: 0 auto;
+    width: 668px;
+  }
+}
