--- a/less/blocks/order-form.less
+++ b/less/blocks/order-form.less
@@ -11,3 +11,29 @@
   line-height: 24px;
   margin: 0;
 }
+
+//tablet
+
+@media @tablet-widths {
+  .order-form__title {
+    padding: 70px 0;
+    background-color: @bg-footer;
+    & h1{
+      font-size: 53px;
+      line-height: 57px;
+    }
+  }
+  .order-form{
+    padding: 0;
+    margin: 0;
+    width: 100%;
+  }
+  .order-form__description{
+    width: 668px;
+    margin: 0 auto;
+    padding: 50px 0;
+    font-size: 17px;
+    line-height: 30px;
+    color: @p-color;
+  }
+}
