--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -22,6 +22,10 @@
   border-top: 1px solid #ececec;
   position: relative;
 
+  &:nth-child(3), &:nth-child(4) {
+    display: none;
+  }
+
   & a {
     font-size: 17px;
     line-height: 24px;
@@ -30,36 +34,65 @@
   }
 }
 
+.header__text-delivery {
+  display: none;
+}
+
 .main-nav__item:last-child {
   border-bottom: 1px solid #ececec;
 }
-
-.main-nav__item--ico-serch::after {
-  content: "";
+.secondary-menu{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.secondary-menu__item{
+  padding-top: 32px;
+  padding-bottom: 35px;
+  padding-left: 14px;
+  border-top: 1px solid #ececec;
+  position: relative;
+  & a {
+    font-size: 17px;
+    line-height: 24px;
+    font-weight: bold;
+    color: #000;
+  }
+}
+.icon-search{
+  padding-right: 25px;
   width: 21px;
   height: 21px;
-  position: absolute;
-  background: url("../img/icon-search.svg") no-repeat;
-  margin-top: 5px;
-  left: 30px;
 }
 
-.main-nav__item--icon-cart::after {
-  content: "";
+.icon-cart {
+  padding-right: 25px;
   width: 21px;
   height: 21px;
-  position: absolute;
-  background: url("../img/icon-cart.svg") no-repeat;
-  margin-top: 5px;
-  left: 30px;
 }
+
+//tablet
 
 @media @tablet-widths {
-  .page-header__title h1{
-    font-size:43px;
-    line-height: 50px;
+  .page-header{
+    width: 100%;
+    margin: 0;
+    padding: 0;
   }
-  .main-nav-toggle{
+  .page-header__wrapper{
+    width: 668px;
+    margin: 0 auto;
+  }
+  .main-nav-toggle {
     display: none;
+  }
+  .main-nav__list{
+    display: inline-flex;
+    font-size: 15px;
+    line-height: 24px;
+  }
+  .main-nav__item{
+    padding: 0;
+    margin: 0;
   }
 }
