--- a/less/variables.less
+++ b/less/variables.less
@@ -3,6 +3,7 @@
 @p-color:#444444;
 @form-text-color:#d2d2d2;
 @border-color: #ececec;
+@color-text-hover:#8d8d8d;
 @tablet-widths: ~"(min-width: 768px)";
 @desktop-widths: ~"(min-width: 1200px)";
 
