--- a/less/blocks/filter-type.less
+++ b/less/blocks/filter-type.less
@@ -34,12 +34,18 @@
     flex-direction: row;
     flex-wrap: wrap;
     &__header{
+      line-height: 16px;
+      font-weight: bold;
+      width: 25%;
+      padding: 0;
     }
     &__item{
+      font-size: 19px;
+      line-height: 18px;
+      margin-bottom:30px;
     }
-  }
-  .filter-type__title::after{
-    display: none;
-
+    &__title::after{
+      display: none;
+    }
   }
 }
