--- a/less/blocks/user-info.less
+++ b/less/blocks/user-info.less
@@ -85,8 +85,42 @@
 //@tablet
 
 @media @tablet-widths {
-  .color-wrapper{
-    margin: 0 auto;
+  .user-info{
     width: 668px;
+    padding: 0;
+    margin: 40px auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    &__header{
+      line-height: 16px;
+      font-weight: bold;
+      width: 25%;
+      padding: 0;
+    }
+    &__list{
+      width: 75%;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+    }
+    &-item {
+      border: none;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      & lable{
+        width: 18%
+      }
+      & input{
+        border-bottom: 2px solid #000;
+        width: 80%
+      }
+    }
+
+
+    &__title::after{
+      display: none;
+    }
   }
 }
