--- a/less/blocks/filter-color.less
+++ b/less/blocks/filter-color.less
@@ -49,3 +49,19 @@
     display: none;
   }
 }
+
+//desktop
+
+@media @desktop-widths {
+  .filter-color{
+    &__wrapper{
+    width: 1050px;
+  }
+    &__header{
+      width: 17%;
+    }
+    &__item{
+      width: 33%;
+    }
+  }
+}
