--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,6 @@
 @import "normalize.less";
 @import "variables.less";
+@import "blocks/main.less";
 @import "global/fonts.less";
 @import "global/base.less";
 @import "blocks/page-header.less";
@@ -16,4 +17,4 @@
 @import "mixin.less";
 @import "blocks/filter-color.less";
 @import "blocks/user-info.less";
-@import "blocks/main.less";
+@import "blocks/additionally.less";
