--- a/less/blocks/order-form.less
+++ b/less/blocks/order-form.less
@@ -11,6 +11,10 @@
   line-height: 24px;
   margin: 0;
 }
+.button-order-form {
+  .btn();
+  background: #fff;
+}
 
 //tablet
 
@@ -24,9 +28,11 @@
     }
   }
   .order-form{
+    position: relative;
     padding: 0;
     margin: 0;
     width: 100%;
+    margin-bottom: 40px;
   }
   .order-form__description{
     width: 668px;
@@ -35,5 +41,23 @@
     font-size: 17px;
     line-height: 30px;
     color: @p-color;
+  }
+  .button-order-form{
+    width: 30%;
+  }
+  .order-form__must-field{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 41%;
+  }
+}
+
+//desktop
+
+@media @desktop-widths {
+  .order-form__description{
+    width: 700px;
+    line-height: 30px;
   }
 }
