--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -20,6 +20,8 @@
 
 @media @tablet-widths {
   .about {
+    margin: 0 auto;
+    width: 668px;
     padding: 0;
     margin-top: 65px;
 
@@ -37,8 +39,7 @@
 
 @media @desktop-widths {
   .about {
-    padding-left: 175px;
-    padding-right: 175px;
+    width: 700px;
     &__title{
       font-size: 53px;
       line-height: 57px
