--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -29,6 +29,11 @@
 
 @media @tablet-widths {
   .contacts{
+    width: 100%;
+    &__wrapper{
+      width: 668px;
+      margin: 0 auto;
+    }
     &__title{
       position: relative;
       padding: 0;
@@ -81,8 +86,9 @@
 
 @media @desktop-widths {
   .contacts{
-    margin: 80px 0;
-    margin-left: 175px;
+    width: 875px;
+    margin: 80px auto;
+    padding-left: 175px;
     &__wrapper{
       float: left;
       width: 40%;
