--- a/less/blocks/featured.less
+++ b/less/blocks/featured.less
@@ -43,6 +43,8 @@
 
 @media @tablet-widths {
   .featured{
+    width: 668px;
+    margin: 0 auto;
     padding: 0;
     display: flex;
     flex-wrap: wrap;
@@ -103,6 +105,7 @@
 
 @media @desktop-widths {
   .featured{
+    width: 1050px;
     position: relative;
     padding-top: 71px;
     &__product-week{
