--- a/less/blocks/page-preview.less
+++ b/less/blocks/page-preview.less
@@ -51,6 +51,8 @@
 
 @media @tablet-widths {
   .page-preview {
+    width: 668px;
+    margin: 0 auto;
     padding: 0;
     display: flex;
     flex-direction: row;
@@ -77,14 +79,8 @@
     }
   }
 }
-
-
 @media @desktop-widths {
-  .reviews{
-    margin-left: 175px;
-    &__title{
-      font-size: 53px;
-      line-height: 57px;
-    }
+.page-preview {
+  width: 1050px;
   }
 }
