--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -54,6 +54,10 @@
   color: @color-text-hover;
 }
 
+.main-nav__item a:active,
+.secondary-menu__item a:active {
+  color: #cacaca;
+}
 .page-header__user-menu {
   width: 100%;
 }
