--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -48,7 +48,8 @@
 
 @media @tablet-widths {
   .video {
-    margin: 0;
+    width: 668px;
+    margin: 0 auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -80,5 +81,11 @@
   }
 }
 @media @desktop-widths {
+  .video{
 
+    margin: 0 auto;
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
