--- a/less/style.less
+++ b/less/style.less
@@ -4,6 +4,7 @@
 @import "global/fonts.less";
 @import "global/base.less";
 @import "blocks/page-header.less";
+@import "blocks/main-header.less";
 @import "blocks/reviews.less";
 @import "blocks/page-preview.less";
 @import "blocks/about.less";
