поле отправить в форме

--- a/less/blocks/additionally.less
+++ b/less/blocks/additionally.less
@@ -22,6 +22,7 @@
   .additionally{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     width: 668px;
     margin: 35px auto;
     &__header{
@@ -36,6 +37,7 @@
         color: @form-text-color;
         padding: 10px;
         width: 100%;
+        margin-bottom: 50px;
       }
     }
   }
@@ -45,9 +47,11 @@
 
 @media @desktop-widths {
   .additionally{
+    flex-wrap: wrap;
     width: 1050px;
     &__textarea{
       width: 64%;
+      margin-bottom: 55px;
     }
   }
 }
