--- a/less/blocks/catalog.less
+++ b/less/blocks/catalog.less
@@ -94,9 +94,9 @@
 @media @desktop-widths {
   .catalog{
     width: 1050px;
+    flex-direction: row;
     display: flex;
-    justify-content: space-between;
-    margin-top: 100px;
+    margin-top: 125px;
 
     &__item{
       width: 314px;
