--- a/less/blocks/order-form.less
+++ b/less/blocks/order-form.less
@@ -56,6 +56,9 @@
 //desktop
 
 @media @desktop-widths {
+  .order-form__must-field{
+    width: 36%;
+  }
   .order-form__description{
     width: 700px;
     line-height: 30px;
