--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -1,26 +1,32 @@
-.contacts__title {
-  padding: 0 30px;
+.contacts__wrapper {
+  width: 260px;
+  margin: 0 auto;
   font-size: 18px;
 }
 
-.contacts__list {
+.contacts{
+  &__list {
   padding: 0 30px;
   color: @p-color;
   font-size: 15px;
   line-height: 30px;
-}
-
-.contacts__write-us {
-  text-transform: uppercase;
-  display: block;
-  margin: 0 30px;
-  text-align: center;
-  padding: 14px 0;
-  border: 2px solid @p-color;
-  color: @p-color;
-  font-size: 18px;
-  line-height: 20px;
-  font-weight: bold;
+  }
+  &__write-us {
+    width: 256px;
+    margin: 0 auto;
+    text-transform: uppercase;
+    display: block;
+    text-align: center;
+    padding: 14px 0;
+    border: 2px solid @p-color;
+    color: @p-color;
+    font-size: 18px;
+    line-height: 20px;
+    font-weight: bold;
+  }
+  &__field{
+    padding-right: 20px;
+  }
 }
 
 .map {
@@ -39,9 +45,6 @@
       padding: 0;
       font-size: 43px;
       line-height: 50px;
-    }
-    &__field{
-      margin-right: 20px;
     }
     &__value{
       width: 230px;
@@ -62,7 +65,6 @@
       }
       & tr{
         display:flex;
-
         width: 50%;
       }
     }
