--- a/less/blocks/page-preview.less
+++ b/less/blocks/page-preview.less
@@ -4,27 +4,39 @@
 }
 
 .page-preview__title {
+  width: 260px;
+  margin: 0 auto;
   padding-top: 76px;
   padding-bottom: 120px;
 }
 
 .page-preview__item {
+  display: block;
+  position: relative;
   color: white;
   background-color: @mint-color;
   margin-left: -30px;
   margin-right: -30px;
-  padding: 30px 160px 30px 60px;
+  padding: 26px 160px 29px 29px;
 
   & p {
+    font-size:19px;
+    line-height: 24px;
+    font-weight: bold;
     margin: 0;
     padding: 0;
   }
 }
 
-.page-preview__item {
-  position: relative;
+.page-preview__item:hover{
+  background-color:#59d5bc;
 }
 
+.page-preview__item:active{
+  & p{
+    color: #97e2d2;
+  }
+}
 .page-preview__item--ico::before {
   content: "";
   right: 50px;
@@ -37,6 +49,13 @@
 
 .page-preview__item--color {
   background-color: #56c3b2;
+}
+.page-preview__item--color:hover{
+  background-color:#46c1ae;
+}
+
+.page-preview__item--color:active{
+  color:#8dd5c9;
 }
 
 .page-preview__item--color::before {
