--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -1,22 +1,80 @@
 .about {
-  margin: 0 auto;
+  margin: 0px auto;
+  padding: 20px 0;
   width: 260px;
 }
 
 .about__title {
-  margin-top: 35px;
+  margin-top: 9px;
 }
-
+.about__list{
+  padding-top: 10px;
+}
 .about__item {
-  padding-top: 33px;
-}
+  position: relative;
+  min-height: 61px;
+  padding-top: 62px;
 
-.about__item p {
-  font-size: 17px;
-  font-weight: bold;
-  line-height: 20px;
-  margin: 20px 0 0;
-  padding-right: 10px;
+    & p {
+    font-size: 17px;
+    font-weight: bold;
+    line-height: 20px;
+    margin-top: 13px;
+    margin-bottom: 0;
+    padding-right: 10px;
+  }
+}
+.icon-feature{
+  &-flower{
+    position: absolute;
+    top: 21px;
+    left: 8px;
+    width: 32px;
+    height: 37px;
+    background: url("../img/icon-feature-1.svg") no-repeat;
+  }
+  &-rectangle{
+    position: absolute;
+    top: 22px;
+    left: 0;
+    width: 48px;
+    height: 30px;
+    background: url("../img/icon-feature-3.svg") no-repeat;
+  }
+  &-heart{
+    position: absolute;
+    top: 27px;
+    left: 8px;
+    width: 40px;
+    height: 29px;
+    background: url("../img/icon-feature-5.svg") no-repeat;
+  }
+  &-circle{
+    position: absolute;
+    top: 25px;
+    left: 4px;
+    width: 36px;
+    height: 36px;
+    background: url("../img/icon-feature-2.svg") no-repeat;
+  }
+  &-missile{
+    position: absolute;
+    top: 26px;
+    left: -5px;
+    width: 55px;
+    height: 29px;
+    background: url("../img/icon-feature-4.svg") no-repeat;
+  }
+  &-gift{
+    position: absolute;
+    top: 24px;
+    left: 3px;
+    width: 36px;
+    height: 36px;
+    background: url("../img/icon-feature-6.svg") no-repeat;
+  }
+
+
 }
 
 @media @tablet-widths {
