--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -11,7 +11,7 @@
 }
 
 .page-footer__social {
-  padding-bottom: 28px;
+  padding-bottom: 24px;
   padding-top: 24px;
   margin-left: 30px;
   margin-right: 30px;
@@ -19,20 +19,20 @@
 }
 
 .social-links a {
-  margin-right: 20px;
+  margin-right: 33px;
 }
 
 .social-links__instagram {
-  margin-left: 78px;
+  margin-left: 58px;
   width: 25px;
-  height: 25px;
+  height: 21px;
   background: url("../img/icon-insta.svg") no-repeat;
   display: inline-block;
 }
 
 .social-links__fb {
   width: 15px;
-  height: 25px;
+  height: 28px;
   background-image: url("../img/icon-fb.svg");
   display: inline-block;
 }
@@ -45,7 +45,9 @@
 }
 
 .page-footer__copyright {
-  padding: 30px;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  padding-left: 67px;
   font-size: 19px;
   line-height: 18px;
   font-weight: bold;
@@ -53,10 +55,10 @@
   & a {
     width: 28px;
     height: 34px;
-    background-image: url("../img/logo-htmlacademy.svg");
+    background: url("../img/logo-htmlacademy.svg") no-repeat;
     display: inline-block;
-    margin-left: 20px;
-    margin-bottom: -10px;
+    margin-left: 19px;
+    margin-bottom: -9px;
   }
 }
 
