--- a/less/blocks/reviews.less
+++ b/less/blocks/reviews.less
@@ -1,12 +1,12 @@
 .reviews {
   margin: 0 auto;
   width: 260px;
-  margin-top: 60px;
+  margin-top: 28px;
   margin-bottom: 44px;
 }
 
 .reviews__title {
-  margin-bottom: 35px;
+  margin-bottom: 24px;
 }
 
 .reviews__item {
@@ -21,7 +21,8 @@
 
 .reviews__name-author {
   display: block;
-  margin: 13px 0;
+  margin: 9px 0;
+  padding-top: 11px;
   font-size: 18px;
   line-height: 24px;
   color: #000;
@@ -33,24 +34,26 @@
 }
 
 .reviews__prev {
+  padding: 0;
   background: url("../img/icon-left-arrow.svg") no-repeat 50% 50%;
   border: 1px solid @border-color;
   background-color: #fff;
-  width: 132px;
+  width: 130px;
   height: 50px;
   display: inline-block;
-  margin-right: -9px;
   cursor: pointer;
 }
 
 .reviews__next {
+  padding: 0;
   background: url("../img/icon-right-arrow.svg") no-repeat 50% 50%;
   border: 1px solid @border-color;
   background-color: #fff;
-  width: 132px;
+  width: 130px;
   height: 50px;
   display: inline-block;
   cursor: pointer;
+  margin-left: -5px;
 }
 
 
