catalog mobile pixelperf-+

--- a/less/blocks/main-header.less
+++ b/less/blocks/main-header.less
@@ -1,5 +1,8 @@
 .main-header{
-  padding: 80px;
   background-color: @bg-footer;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
+  &__title{
+    text-align: center;
+    padding: 70px 0 76px 0;
+  }
 }
