--- a/less/blocks/catalog.less
+++ b/less/blocks/catalog.less
@@ -1,12 +1,9 @@
-.catalog {
-  padding: 0 30px;
-}
-
 .catalog__item {
-  width: 260px;
+  width: 258px;
   margin: 0 auto;
   border: 1px solid #ececec;
   margin-bottom: 30px;
+  border: 1px solid @border-color;
 }
 
 .item-content__title {
@@ -14,7 +11,7 @@
 }
 
 .item-content {
-  padding: 20px 30px;
+  padding: 24px 27px 30px 27px;
 
   & p {
     margin: 0;
@@ -23,8 +20,10 @@
   }
 }
 
+
 .catalog-item-footer {
-  padding-top: 27px;
+  border-top: 1px solid @border-color;
+  padding-top: 19px;
 }
 
 .catalog-item-footer__cost{
@@ -35,7 +34,7 @@
   word-wrap:break-word;
 }
 .catalog-item-footer__basket{
-  width: 102px;
+  width: 109px;
   display: inline-block;
   height: 21px;
   background: url("../img/icon-cart.svg") no-repeat;
