--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -1,47 +1,46 @@
 .video {
-  margin: 0 30px;
+  width: 260px;
+  margin: 0 auto;
   border: 1px solid #ececec;
+  margin-bottom: 58px;
 }
 
 .video-header {
-  padding-top: 27px;
+  padding-top: 22px;
   padding-right: 27px;
-  padding-bottom: 27px;
+  padding-bottom: 24px;
 }
 
 .video-header__camera {
-  width: 60px;
+  margin-top: 6px;
+  width: 66px;
   height: 60px;
-  margin-right: 20px;
+  margin-right: 24px;
   display: block;
   float: left;
   background: url("../img/icon-video.svg") 100% 0 no-repeat;
 }
 
 .video__comment {
-  margin-left: 33px;
-  margin-right: 33px;
+  margin: 25px 40px 24px 35px;
   font-size: 13px;
   line-height: 24px;
 }
 
 .video-player {
   width: 100%;
-  height: 100%;
+  min-height: 150px;
   background: url("../img/video-mobile@1x.jpg") 100% 0 no-repeat;
 }
 
 .video__make-order {
-  margin: 30px 33px;
-  text-transform: uppercase;
-  display: block;
-  text-align: center;
-  padding: 14px 0;
-  border: 2px solid @p-color;
-  color: @p-color;
-  font-size: 18px;
-  line-height: 20px;
-  font-weight: bold;
+  .btn();
+  font-size: 17px;
+  line-height: 16px;
+  padding-bottom: 18px;
+  margin: 0 34px;
+  margin-bottom: 32px;
+  width:72%;
 }
 
 //tablet
