form page поправки

--- a/less/blocks/filter-type.less
+++ b/less/blocks/filter-type.less
@@ -1,11 +1,15 @@
-.filter-type__header {
-  padding: 25px 0;
-  position: relative;
-  text-transform: uppercase;
-}
-.filter-type__title{
-  color: @mint-color;
+.filter-type{
+  width: 260px;
+  margin: 0 auto;
 
+  &__header {
+    padding: 25px 0;
+    position: relative;
+    text-transform: uppercase;
+  }
+  &__title{
+    color: @mint-color;
+  }
 }
 .filter-type__title::after {
   .green-line();
