--- a/less/blocks/order-form.less
+++ b/less/blocks/order-form.less
@@ -1,15 +1,17 @@
-.order-form {
-  .container();
-  width: 260px;
-  padding: 0 30px;
-  font-size: 17px;
-  line-height: 18px;
+.order-form-header{
+  background-color: @bg-footer;
+  margin-bottom: 22px;
+  &__title{
+    text-align: center;
+    padding: 70px 0 76px 0;
+  }
 }
 
 .order-form__description {
+  width: 260px;
+  margin: 0 auto;
   font-size: 13px;
   line-height: 24px;
-  margin: 0;
 }
 .button-order-form {
   .btn();
