--- a/less/blocks/order-form.less
+++ b/less/blocks/order-form.less
@@ -16,7 +16,19 @@
 .button-order-form {
   .btn();
   background: #fff;
+  font-size: 17px;
+  line-height: 16px;
+  padding: 16px 0;
+
 }
+
+.order-form__must-field {
+  font-size: 14px;
+  line-height: 16px;
+  color: @form-text-color;
+  margin-bottom: 33px;
+}
+
 
 //tablet
 
