--- a/less/style.less
+++ b/less/style.less
@@ -17,4 +17,5 @@
 @import "mixin.less";
 @import "blocks/filter-color.less";
 @import "blocks/user-info.less";
+@import "blocks/user-contacts.less";
 @import "blocks/additionally.less";
