--- a/less/blocks/additionally.less
+++ b/less/blocks/additionally.less
@@ -1,17 +1,27 @@
+.additionally{
+  width: 260px;
+  margin: 0 auto;
+  padding-bottom: 25px;
+}
 .additionally__header {
-  padding: 25px 0;
+  padding: 0px 0;
+  font-weight:bold;
   position: relative;
+  margin-bottom: 26px;
 }
 
 .additionally__textarea {
   color: @form-text-color;
+  font-size:17 px;
+  line-height: 18px;
 
   & textarea {
     border: 2px solid black;
-    width: 234px;
-    height: 120px;
+    width: 212px;
+    height: 108px;
     resize: none;
-    padding: 10px;
+    padding: 15px;
+    padding-right: 30px;
   }
 }
 
