--- a/less/mixin.less
+++ b/less/mixin.less
@@ -1,11 +1,11 @@
 .green-line() {
   content: "";
-  width: 200px;
+  width: 198px;
   height: 1px;
   position: absolute;
   background-color: @mint-color;
-  right: 0;
-  top: 0;
+  right: -1px;
+  top: 32px;
   background-position: right;
 }
 
